[package]
name = "i2c-interface"
version = "0.1.0"
authors = ["lukwol <wolanczyk.lukasz@gmail.com>"]
edition = "2018"
repository = "https://github.com/lukwol/i2c-interface"
license = "MIT/Apache-2.0"
description = "Generic I2C interface for easy reading and writing to registers."

[dependencies]
embedded-hal = "0.2.3"
generic-array = "0.14.1"
